--- a/src/main/resources/org/eqaula/messages.properties
+++ b/src/main/resources/org/eqaula/messages.properties
@@ -6,8 +6,8 @@
 # \u00fa = \u00fa
 # \u00e1 = \u00e1
 
-app.name=Glue
-app.logo=Adhesive software
+app.name=Software de Gestion de Servicios de Salud
+app.logo=Clinical software
 common.more=M\u00e1s
 common.view=Ver
 common.cancel=Regresar
@@ -18,7 +18,7 @@ common.login=Iniciar
 common.logout=Cerrar sessi\u00f3n
 common.selectedBussinesEntity=Entidad seleccionado
 common.emptyBussinesEntityList=No se encontraron entidades, cree una ahora!
-common.username=Glue ID
+common.username=User ID
 common.password=Contrase\u00f1a
 common.confirmPassword=Confirme la contrase\u00f1a
 common.password.first=Ingrese una contrase\u00f1a
@@ -33,7 +33,7 @@ common.email=Correo electr\u00f3nico
 common.signup=Unirme ahora!
 common.signupopenid=Unirme ahora usando Open ID
 common.join=Crear cuenta
-common.alreadyaccount=Ya dispongo de una cuenta glue
+common.alreadyaccount=Acceder desde mi cuenta
 common.createaccount=Crear una cuenta?
 common.notasks=No hay nada pendiente!
 common.setting=Configurar mi cuenta
@@ -184,7 +184,7 @@ account.detail=Detalle de cuenta
 account.catalogue=Cat\u00e1logo de cuentas
 account.code=C\u00f3digo
 account.type=Tipo
-account.name=Nombre
+=Nombre
 
 #Profile messages
 profile=Perfil de usuario
