actualizacion 7 comit,  admin paciente  editar

--- a/src/main/resources/org/eqaula/messages_es.properties
+++ b/src/main/resources/org/eqaula/messages_es.properties
@@ -18,7 +18,7 @@ common.login=Iniciar
 common.logout=Cerrar sessi\u00f3n
 common.selectedBussinesEntity=Entidad seleccionado
 common.emptyBussinesEntityList=No se encontraron entidades, cree una ahora!
-common.username=User ID
+common.username=ID Usuario
 common.password=Contrase\u00f1a
 common.confirmPassword=Confirme la contrase\u00f1a
 common.password.first=Ingrese una contrase\u00f1a
@@ -215,7 +215,7 @@ module.organization=Organizaci\u00f3n
 module.BussinesEntityType=Tipo de Entidad de Negocio
 module.BussinesEntityType.name=Nombre
 module.BussinesEntityType.label=Etiqueta
-module.BussinesEntityType.description=Descripci\u00f3n
+common.dir=Direcci\u00f3n
 module.BussinesEntityType.attributeAccount=Atributos de Esctruturas
 module.BussinesEntityType.structureAccount=Estructuras
 panel.admin=Panel de Administraci\u00f3n
@@ -287,3 +287,11 @@ module.account.posting.type=Tipo de Cuenta
 common.print=Imprimir
 common.report=Reporte
 paciente.admin=Administraci\u00f3n de Pacientes
+common.fecha.nacimiento=Fecha de Nacimiento
+common.edad=Edad
+common.edad.inlinehelp=Su edad segun su fecha de nacimiento es
+common.dir.inlinehelp=Indique la direcci\u00f3n en donde vive
+common.telefono=N\u00famero telef\u00f3nico
+common.telefono.inlinehelp=Indique el n\u00famero telef\u00f3nico ejp: 072546789 o 0923456701
+common.cel=N\u00famero de Celular
+common.cel.inlinehelp=Indique su n\u00famero de celular 
