actualizacion 8 césar, comit;  edición vista paciente

--- a/src/main/resources/org/eqaula/messages_es.properties
+++ b/src/main/resources/org/eqaula/messages_es.properties
@@ -289,9 +289,18 @@ common.report=Reporte
 paciente.admin=Administraci\u00f3n de Pacientes
 common.fecha.nacimiento=Fecha de Nacimiento
 common.edad=Edad
-common.edad.inlinehelp=Su edad segun su fecha de nacimiento es
+common.edad.inlinehelp=Su edad en a\u00f1os, segun su fecha de nacimiento es
+iento es
 common.dir.inlinehelp=Indique la direcci\u00f3n en donde vive
 common.telefono=N\u00famero telef\u00f3nico
-common.telefono.inlinehelp=Indique el n\u00famero telef\u00f3nico ejp: 072546789 o 0923456701
+common.telefono.inlinehelp=Indique el n\u00famero telef\u00f3nico ejp: 072546789
 common.cel=N\u00famero de Celular
 common.cel.inlinehelp=Indique su n\u00famero de celular 
+modulo.paciente=Paciente
+modulo.estudiante.datosAcademicos=Datos Acad\u00e9micos
+common.modulo=M\u00f3dulo
+modulo.paciente.ocupacion=Ocupaci\u00f3n
+modulo.paciente.profesion=Profesi\u00f3n
+modulo.paciente.ocupacion.inlinehelp=Ingrese su Ocupaci\u00f3n
+modulo.paciente.profesion.inlinehelp=Ingrese su Profesi\u00f3n
+common.buscar=Buscar
