Commit 8 medicamentoService, medicamentoHome, medicamento.xhtml

--- a/src/main/resources/org/eqaula/messages_es.properties
+++ b/src/main/resources/org/eqaula/messages_es.properties
@@ -295,3 +295,19 @@ common.telefono=N\u00famero telef\u00f3nico
 common.telefono.inlinehelp=Indique el n\u00famero telef\u00f3nico ejp: 072546789 o 0923456701
 common.cel=N\u00famero de Celular
 common.cel.inlinehelp=Indique su n\u00famero de celular 
+medicamento.admin=Administrar Medicamentos
+common.fecha.ingreso.medicamento=Fecha de INgreso del Medicamento
+common.nombre.comercial=Nombre Comercial
+common.nombre.generico=Nombre Generico
+#Referencia
+common.referencia.medicamento=
+common.casaComercialProveedora=Casa Comercial Proveedora
+common.casacaomercial.inlinehelp=El nombre de la Casa Comercial Proveedora
+common.dircasacomercial=Direccion Casa Comercial Proveedora
+common.nombrecomercial=Nombre Comercial
+common.nombregenerico=Nombre Generico
+common.referenciaMedicamento=Referencia
+common.fechaelaboracionmedicamento=Fecha Elaboraci\u00f3n 
+common.fechacaducidadmedicamento=Fecha de Caducidad
+common.numfactura=N\u00famero de Factura
+common.unidadadesmedicamento=Unidades 
