actualizacion 9 césar, comit;  edición vista paciente 1

--- a/src/main/resources/org/eqaula/messages_es.properties
+++ b/src/main/resources/org/eqaula/messages_es.properties
@@ -272,7 +272,7 @@ module.setting.row=N\u00famero de Columnas
 module.setting.dateformat=Formato de fecha
 module.setting.value.inlinehelp=Debe ingresar un valor para la propiedad
 module.setting.row.inlinehelp=Ingrese la cantidad de columnas. Ej: 3
-module.setting.dateformat.inlinehelp=Formato de fecha. Ej: dd/MM/yyyy
+module.setting.dateformat.inlinehelp=Formato de fecha. Ej: dd-MMM-yyyy
 validator.dni=El DNI ingresado pertenece a otro usuario
 common.email.novalid=El email ingresado no es v\u00e1lido
 common.email.noavailable=La direcci\u00f3n de correo electr\u00f3nica ingresada ya est\u00e1 en uso
@@ -304,3 +304,21 @@ modulo.paciente.profesion=Profesi\u00f3n
 modulo.paciente.ocupacion.inlinehelp=Ingrese su Ocupaci\u00f3n
 modulo.paciente.profesion.inlinehelp=Ingrese su Profesi\u00f3n
 common.buscar=Buscar
+common.fecha.nacimiento.lineaAyuda=Formato de fecha. Ej: dd-MMM-yyyy
+comun.genero=Genero
+comun.genero.lineaAyuda=Selecciones su genero
+comun.nacionalidad=Nacionalidad
+comun.nacionalidad.lineaAyuda=Indique su nacionalidad
+comun.tipoEstudiante=Tipo de Estudiante
+comun.tipoEstudiante.lineaAyuda=Seleccione que tipo de  Estudiante es
+comun.area=\u00c1rea
+comun.area.lineaAyuda=Seleccione en que are\u00e1 estudia
+comun.carrera=Carrera
+comun.carrera.lineaAyuda=Indique que carrera estudia
+comun.modulo=M\u00f3dulo
+comun.modulo.lineaAyuda=Indique en que m\u00f3dulo est\u00e1
+comun.paralelo=Paralelo
+comun.paralelo.lineaAyuda=Indique en que paralelo est\u00e1
+panel.admin.secretaria=Modulo de Secretaria
+panel.admin.farmacia=M\u00f3dulo de Administraci\u00f3n de Farmacia
+modulo.medicamento=Administrar Medicamentos
