--- a/src/main/resources/org/eqaula/messages.properties
+++ b/src/main/resources/org/eqaula/messages.properties
@@ -318,3 +318,18 @@ comun.paralelo.lineaAyuda=Indique en que paralelo est\u00e1
 panel.admin.secretaria=Modulo de Secretaria
 panel.admin.farmacia=M\u00f3dulo de Farmacia
 modulo.medicamento=Administrar Medicamentos
+medicamento.admin=Administrar Medicamentos
+common.fecha.ingreso.medicamento=Fecha de INgreso del Medicamento
+common.nombre.comercial=Nombre Comercial
+common.nombre.generico=Nombre Generico
+common.casaComercialProveedora=Casa Comercial Proveedora
+common.casacaomercial.inlinehelp=El nombre de la Casa Comercial Proveedora
+common.dircasacomercial=Direccion Casa Comercial Proveedora
+common.nombrecomercial=Nombre Comercial
+common.nombregenerico=Nombre Generico
+common.referenciaMedicamento=Referencia
+common.fechaelaboracionmedicamento=Fecha Elaboraci\u00f3n 
+common.fechacaducidadmedicamento=Fecha de Caducidad
+common.numfactura=N\u00famero de Factura
+common.unidadadesmedicamento=Unidades 
+
