actualizacion 16 césar, comit;  cambios todo proyecto

--- a/src/main/resources/edu/sgssalud/messages_es.properties
+++ b/src/main/resources/edu/sgssalud/messages_es.properties
@@ -222,6 +222,9 @@ panel.admin=Panel de Administraci\u00f3n
 panel.tools=Herramientas
 panel.admin.entities=Administraci\u00f3n de Entidades
 panel.admin.hql=Probador de HQL
+panel.admin.organizations=Organizaciones
+panel.admin.profiles=Perfiles
+panel.admin.accounting=Contabilidad
 module.BussinesEntityType.typeName=Nombre de la Entidad de Negocio
 module.bussinesEntityType.typeName.help=Escriba el nombre de la entidad de negocio
 panel.Basic=B\u00e1sicos
@@ -286,14 +289,15 @@ common.report=Reporte
 paciente.admin=Administraci\u00f3n de Pacientes
 common.fecha.nacimiento=Fecha de Nacimiento
 common.edad=Edad
-common.edad.inlinehelp=Su edad en a\u00f1os, segun su fecha de nacimiento es
+common.edad.inlinehelp=Su edad en a\u00f1os, dada su fecha de nacimiento
+iento es
 common.dir.inlinehelp=Indique la direcci\u00f3n en donde vive
 common.telefono=N\u00famero telef\u00f3nico
 common.telefono.inlinehelp=Indique el n\u00famero telef\u00f3nico ejp: 072546789
 common.cel=N\u00famero de Celular
 common.cel.inlinehelp=Indique su n\u00famero de celular 
 medicamento.admin=Administrar Medicamentos
-common.fecha.ingreso.medicamento=Fecha de INgreso del Medicamento
+common.fecha.ingreso.medicamento=Fecha de Ingreso del Medicamento
 common.nombre.comercial=Nombre Comercial
 common.nombre.generico=Nombre Generico
 #Referencia
@@ -308,3 +312,19 @@ common.fechaelaboracionmedicamento=Fecha Elaboraci\u00f3n
 common.fechacaducidadmedicamento=Fecha de Caducidad
 common.numfactura=N\u00famero de Factura
 common.unidadadesmedicamento=Unidades 
+common.fecha.ingreso.medicamento.lineaAyuda=Fecha actual del servidor
+common.fechaelaboracionmedicamento.lineaAyuda=Fecha en la que fue elaborado el medicamento
+common.fechacaducidadmedicamento.lineaAyuda=Fecha en la que caduca dicho medicamento
+modulo.admin.secretaria=M\u00f3dulo de Administraci\u00f3n de Secretar\u00eda
+modulo.admin.farmacia=M\u00f3dulo de Administraci\u00f3n de Farmacia
+comun.genero=G\u00e9nero
+comun.genero.lineaAyuda=Indique su g\u00e9nero
+comun.nacionalidad=Nacionalidad
+comun.nacionalidad.lineaAyuda=Indique a que nacionalidad pertenece
+common.fecha.nacimiento.lineaAyuda=Indique su fecha de Nacimiento
+comun.ocupacion=Ocupaci\u00f3n
+comun.ocupacion.inlinehelp=Indique que ocupaci\u00f3n tiene
+comun.profesion=Profesi\u00f3n
+comun.profesion.inlinehelp=Indique que profesi\u00f3n tiene
+comun.tipoEstudiante=Tipo de Estudiante
+comun.tipoEstudiante.lineaAyuda=Seleccione el tipo de Estudiante perteneciente a la Comunidad Universitaria
