terminado admins medicamento   se corrigio paciente

--- a/src/main/resources/edu/sgssalud/messages.properties
+++ b/src/main/resources/edu/sgssalud/messages.properties
@@ -32,7 +32,7 @@ common.name.inlinehelp=Nombre de la entidad de negocio
 common.email=Correo electr\u00f3nico
 common.signup=Unirme ahora!
 common.signupopenid=Unirme ahora usando Open ID
-common.join=Crear cuenta
+common.join=Acceder a mi Cuenta
 common.alreadyaccount=Acceder desde mi cuenta
 common.createaccount=Crear una cuenta?
 common.notasks=No hay nada pendiente!
@@ -109,7 +109,7 @@ common.property.type=Tipo de Dato
 common.property.type.help=Tipo de dato de la propiedad, ejemplo (String, Date, Double, etc...)
 common.property.required=Propiedad requerida
 common.property.showInColumns=A\u00f1adir esta propiedad a las columnas en la lista de miembros
-common.property.sequence=Posici\u00f3n en el formulario
+common.property.sequence=Posici\u00f3n en el vista
 common.property.value=Valor
 common.property.render=Renderizar
 common.property.customForm.help=Indique una ruta del formulario, ejemplo (pages/admin/) 
@@ -274,7 +274,7 @@ validator.dni=El DNI ingresado pertenece a otro usuario
 common.email.novalid=El email ingresado no es v\u00e1lido
 common.email.noavailable=La direcci\u00f3n de correo electr\u00f3nica ingresada ya est\u00e1 en uso
 common.name.noavailable=El nombre ingresado para esta entidad no est\u00e1 disponible
-common.login.title=Inicie con su nombre de usuario y contrase\u00f1a
+common.login.title=Iniciar sesi\u00f3n con su nombre de usuario y contrase\u00f1a
 common.password.validator="Contrase\u00f1a muy corta  (ingrese m\u00ednimo 8 caracteres) - se permiten letras, numeros y otros caracteres especiales."
 module.accounting.posting.paymentdate=Fecha de Pago
 module.accounting.posting.amountinletters=Monto en letras
@@ -324,3 +324,12 @@ comun.profesion=Profesi\u00f3n
 comun.profesion.inlinehelp=Indique que profesi\u00f3n tiene
 comun.tipoEstudiante=Tipo de Estudiante
 comun.tipoEstudiante.lineaAyuda=Seleccione el tipo de Estudiante perteneciente a la Comunidad Universitaria
+modulo.estudiante.datosAcademicos=Datos Acad\u00e9micos
+comun.area=\u00c1rea
+comun.area.lineaAyuda=A que \u00e1rea pertenece su carrera
+comun.carrera=Carrera
+comun.carrera.lineaAyuda=En que carrera estudia
+comun.modulo=M\u00f3dulo
+comun.modulo.lineaAyuda=Indique en que m\u00f3dulo est\u00e1
+comun.paralelo=Paralelo
+comun.paralelo.lineaAyuda=En que paralelo est\u00e1
