Actualizacion de todo el proyecto

--- a/src/main/resources/edu/sgssalud/messages_es.properties
+++ b/src/main/resources/edu/sgssalud/messages_es.properties
@@ -337,3 +337,9 @@ comun.modulo=M\u00f3dulo
 comun.modulo.lineaAyuda=Indique en que m\u00f3dulo est\u00e1
 comun.paralelo=Paralelo
 comun.paralelo.lineaAyuda=En que paralelo est\u00e1
+common.assignto=Asignar a est\u00e9
+common.group=Grupo
+common.security.associateto=Asociar usuario a
+security.assignedgroups=Grupos asignados
+common.actions=Acciones
+common.security.associateto.inlinehelp=Seleccione el grupo al que quiere asignar este Usuario
