--- a/src/main/resources/edu/sgssalud/messages_es_EC.properties
+++ b/src/main/resources/edu/sgssalud/messages_es_EC.properties
@@ -339,3 +339,13 @@ common.security.associateto=Asociar usuario a
 security.assignedgroups=Grupos asignados
 common.actions=Acciones
 common.security.associateto.inlinehelp=Seleccione el grupo al que quiere asignar este Usuario
+modulo.admin.Medicina=M\u00f3dulo de Administraci\u00f3n de Medicina
+historiasclinicas.admin=Administrar Fichas M\u00e9dicas
+agendaMedica.admin=Programar Agenda M\u00e9dica
+modulo.admin.Odontologia=M\u00f3dulo de Administracion de Odontolog\u00eda
+fichaOdontologica.admin=Administrar Fichas Odontol\u00f3gicas
+agendaOdontologica.admin=Programar Agenda Odontol\u00f3gica
+modulo.admin.LabClinico=M\u00f3dulo de Administraci\u00f3n de Laboratorio Cl\u00ednico
+pedidoLabClinico.admin=Realizar pedidos de ex\u00e1menes de Laboratorio Cl\u00ednico
+examenesLabClinico.admin=Administrar Examenes de Laboratorio Cl\u00ednico
+recetas.admin=Emitir Recetas
