modulo de medicina parte 1.3 y  rectificacion de fichamedica

--- a/src/main/resources/edu/sgssalud/messages.properties
+++ b/src/main/resources/edu/sgssalud/messages.properties
@@ -349,3 +349,14 @@ modulo.admin.LabClinico=M\u00f3dulo de Administraci\u00f3n de Laboratorio Cl\u00
 pedidoLabClinico.admin=Realizar pedidos de ex\u00e1menes de Laboratorio Cl\u00ednico
 examenesLabClinico.admin=Administrar Examenes de Laboratorio Cl\u00ednico
 recetas.admin=Emitir Recetas
+#Modulo de Medicina
+fichaMedica.grupoSangineo=Grupo Sangineo
+fichaMedica.grupoSanguineo.lineaAyuda=Indique ha que grupo sanguineo pertenece
+fichaMedica.fechaApertura=Fecha de Apertura
+fichaMedica.numero=N\u00b0 de Ficha
+fichaMedica.abrir=Apertura Ficha M\u00e9dica
+
+consultaMedica.title=CONSULTAS M\u00c9DICAS
+consultaMedica.motivo=Motivo de Consulta
+consultaMedica.fechaConsulta=Fecha de Consulta
+consultaMedica.enfermedadActual=Enfermedad Actual
