--- a/src/main/resources/edu/sgssalud/messages_es_EC.properties
+++ b/src/main/resources/edu/sgssalud/messages_es_EC.properties
@@ -349,3 +349,7 @@ modulo.admin.LabClinico=M\u00f3dulo de Administraci\u00f3n de Laboratorio Cl\u00
 pedidoLabClinico.admin=Realizar pedidos de ex\u00e1menes de Laboratorio Cl\u00ednico
 examenesLabClinico.admin=Administrar Examenes de Laboratorio Cl\u00ednico
 recetas.admin=Emitir Recetas
+fichaMedica.grupoSangineo=Grupo Sangineo
+fichaMedica.grupoSanguineo.lineaAyuda=Indique ha que grupo sanguineo pertenece
+fichaMedica.fechaApertura=Fecha de Apertura
+fichaMedica.numero=N\u00b0 de Ficha
