actualizacion 1.5  y  rectificacion de la seguridad de usuarios

--- a/src/main/resources/edu/sgssalud/messages.properties
+++ b/src/main/resources/edu/sgssalud/messages.properties
@@ -133,6 +133,7 @@ common.property.overwrite=Sobre escribir attributo
 common.property.validator.help=Nombre de bean validador en el contexto seam
 common.property.converter.help=Nombre de bean conversor en el contexto seam
 common.property.overwrite.help=Nombre de attributo de clase BussinesEntity a sobreescribir al momento de guardar el objeto
+common.remove.gropoAsignado=Borrar Grupo Asingado
 common.saveNew=Guardar
 common.for=para
 common.delete.confirm.message=Esta seguro que quiere borrar los datos
@@ -349,7 +350,7 @@ modulo.admin.LabClinico=M\u00f3dulo de Administraci\u00f3n de Laboratorio Cl\u00
 pedidoLabClinico.admin=Realizar pedidos de ex\u00e1menes de Laboratorio Cl\u00ednico
 examenesLabClinico.admin=Administrar Examenes de Laboratorio Cl\u00ednico
 recetas.admin=Emitir Recetas
-#Modulo de Medicina
+#Inicio Modulo de Medicina
 fichaMedica.grupoSangineo=Grupo Sangineo
 fichaMedica.grupoSanguineo.lineaAyuda=Indique ha que grupo sanguineo pertenece
 fichaMedica.fechaApertura=Fecha de Apertura
@@ -360,3 +361,18 @@ consultaMedica.title=CONSULTAS M\u00c9DICAS
 consultaMedica.motivo=Motivo de Consulta
 consultaMedica.fechaConsulta=Fecha de Consulta
 consultaMedica.enfermedadActual=Enfermedad Actual
+consultaMedica.horaConsulta=Hora de Consulta
+consultaMedica.tiempoConsulta=Tiempo de Consulta
+
+signosVitales.peso=Peso
+signosVitales.presionArt=Presi\u00f3n Arterial
+signosVitales.frecuenciaResp=Frecuencia Respiratoria
+signosVitales.talla=Talla
+signosVitales.talla=Pulso
+signosVitales.temperatura=Temperatura
+signosVitales.enfermedadAct=Enfermedad o Problema Actual
+consultaMedica.diagnostico=Diagn\u00f3stico
+consultaMedica.Tratamiento=Tratamiento
+consultaMedica.observacionC=Observaci\u00f3n general de Consulta Medica
+#Fin Modulo de Medicina
+
