Commit 12 clases: cambios en receta.xhtml

--- a/src/main/resources/edu/sgssalud/messages.properties
+++ b/src/main/resources/edu/sgssalud/messages.properties
@@ -1,4 +1,4 @@
-#UTF 8 codes
+fichaMedica.fechaApertura#UTF 8 codes
 # \u00f1 = \u00f1
 # \u00e9 = \u00e9
 # \u00f3 = \u00f3
@@ -376,3 +376,6 @@ consultaMedica.Tratamiento=Tratamiento
 consultaMedica.observacionC=Observaci\u00f3n general de Consulta Medica
 #Fin Modulo de Medicina
 
+#Inicio Modulo Farmacia
+fechaReceta.fechaEmision=Fecha
+#Fin Modulo Farmacia
