actualizacion 1.8 : se modifico fichas medicas y seguridad del proyecto

--- a/src/main/resources/edu/sgssalud/messages.properties
+++ b/src/main/resources/edu/sgssalud/messages.properties
@@ -277,7 +277,7 @@ common.email.noavailable=La direcci\u00f3n de correo electr\u00f3nica ingresada 
 common.name.noavailable=El nombre ingresado para esta entidad no est\u00e1 disponible
 common.login.title=Iniciar sesi\u00f3n con su nombre de usuario y contrase\u00f1a
 common.password.validator="Contrase\u00f1a muy corta  (ingrese m\u00ednimo 8 caracteres) - se permiten letras, numeros y otros caracteres especiales."
-module.accounting.posting.paymentdate=Fecha de Pago
+comun.limite.vigencia=Limite de Vigencia
 module.accounting.posting.amountinletters=Monto en letras
 module.accounting.amount=Monto
 module.accounting.posting.debit=Debe
@@ -349,6 +349,7 @@ agendaOdontologica.admin=Programar Agenda Odontol\u00f3gica
 modulo.admin.LabClinico=M\u00f3dulo de Administraci\u00f3n de Laboratorio Cl\u00ednico
 pedidoLabClinico.admin=Realizar pedidos de ex\u00e1menes de Laboratorio Cl\u00ednico
 examenesLabClinico.admin=Administrar Examenes de Laboratorio Cl\u00ednico
+modulo.admin.enfermeria=M\u00f3dulo de Administraci\u00f3n Enfermeria
 recetas.admin=Emitir Recetas
 #Inicio Modulo de Medicina
 fichaMedica.grupoSangineo=Grupo Sangineo
@@ -368,7 +369,7 @@ signosVitales.peso=Peso
 signosVitales.presionArt=Presi\u00f3n Arterial
 signosVitales.frecuenciaResp=Frecuencia Respiratoria
 signosVitales.talla=Talla
-signosVitales.talla=Pulso
+signosVitales.pulso=Pulso
 signosVitales.temperatura=Temperatura
 signosVitales.enfermedadAct=Enfermedad o Problema Actual
 consultaMedica.diagnostico=Diagn\u00f3stico
@@ -379,3 +380,21 @@ consultaMedica.observacionC=Observaci\u00f3n general de Consulta Medica
 #Inicio Modulo Farmacia
 fechaReceta.fechaEmision=Fecha
 #Fin Modulo Farmacia
+
+#Inicio Servicios Medicos 
+servicioMedico.nombre=Servicios M\u00e9dicos
+servicioMedico.nombre.odont=Servicio Odontol\u00f3gico 
+servicioMedico.nombre.lineaAyuda=Nombre del servicio m\u00e9dico
+servicioMedico.descripcion.lineaAyuda=Ingrese alguna descripci\u00f3n
+servicioMedico.fechaVigencia.lineaAyuda=Fecha m\u00e1xima de vigencia
+servicioMedico.imagen=Imagen
+servicioMedico.todasZonas=Zonas del Diente
+servicioMedico.todasZonas.lineaAyuda=Si es servicio Odontol\u00f3gico marcar si aplica a las zonas independientes del diente
+servicioMedico.categoria=Categoria del Servicio
+servicioMedico.categoria.lineaAyuda=Categoria a la que pertenece el servicio 
+#Fin Servicios Medicos 
+
+#Inicio Consulta Odontologica
+tratamiento.procedimiento=Procedimiento
+#Fin Consulta Odontologica
+
