--- a/src/main/resources/edu/sgssalud/messages_es.properties
+++ b/src/main/resources/edu/sgssalud/messages_es.properties
@@ -279,7 +279,7 @@ common.email.noavailable=La direcci\u00f3n de correo electr\u00f3nica ingresada 
 common.name.noavailable=El nombre ingresado para esta entidad no est\u00e1 disponible
 common.login.title=Iniciar sesi\u00f3n con su nombre de usuario y contrase\u00f1a
 common.password.validator="Contrase\u00f1a muy corta  (ingrese m\u00ednimo 8 caracteres) - se permiten letras, numeros y otros caracteres especiales."
-module.accounting.posting.paymentdate=Fecha de Pago
+comun.limite.vigencia=Limite de Vigencia
 module.accounting.posting.amountinletters=Monto en letras
 module.accounting.amount=Monto
 module.accounting.posting.debit=Debe
@@ -308,7 +308,7 @@ common.dircasacomercial=Direccion Casa Comercial Proveedora
 common.nombrecomercial=Nombre Comercial
 common.nombregenerico=Nombre Generico
 common.referenciaMedicamento=Referencia
-common.fechaelaboracionmedicamento=Fecha Elaboraci\u00f3n 
+common.fechaelaboracionmedicamento=Limite de Vigencia
 common.fechacaducidadmedicamento=Fecha de Caducidad
 common.numfactura=N\u00famero de Factura
 common.unidadadesmedicamento=Unidades 
