actualizacion 2.0 : se modifico recetas

--- a/src/main/resources/edu/sgssalud/messages.properties
+++ b/src/main/resources/edu/sgssalud/messages.properties
@@ -379,14 +379,17 @@ consultaMedica.observacionC=Observaci\u00f3n general de Consulta Medica
 
 #Inicio Modulo Farmacia
 medicamento.nombre=Medicamentos Disponibles
+medicamento.presentacion=Presentaci\u00f3n
 fechaReceta.fechaEmision=Fecha
-receta.unidadesMedicacion=Unidades Mediccion
+receta.unidadesMedicacion=Unidades Medicaci\u00f3n
 receta.unidadesMedicacion.lineaAyuda=Cuantas unidades debe tomar
 receta.dosis=Dosis
 receta.dosis.lineaAyuda=
 receta.tiempoToma=Tomar
 receta.tiempoToma.lineaAyuda=Tomar
 receta.duracionTratamiento=Duraci\u00f3n de Tratamiento
+receta.cargar.indicacion=Cargar Indicaci\u00f3n
+receta.indicaciones=Indicaciones
 #Fin Modulo Farmacia
 
 #Inicio Servicios Medicos 
