--- a/src/main/resources/edu/sgssalud/messages.properties
+++ b/src/main/resources/edu/sgssalud/messages.properties
@@ -388,8 +388,12 @@ receta.dosis.lineaAyuda=
 receta.tiempoToma=Tomar
 receta.tiempoToma.lineaAyuda=Tomar
 receta.duracionTratamiento=Duraci\u00f3n de Tratamiento
-receta.cargar.indicacion=Cargar Indicaci\u00f3n
+receta.cargar.medicamento=Cargar Medicamento
 receta.indicaciones=Indicaciones
+receta.instriccion.unidadaesMedicacion=Indique el N\u00famero de Unidades del Medicamento
+receta.instriccion.dosis=Indique las unidades por Toma
+receta.instriccion.tiempoToma=Indique el Periodo entre Toma
+receta.instriccion.duracionTratamiento=Indique el Periodo del Tratamiento
 #Fin Modulo Farmacia
 
 #Inicio Servicios Medicos 
@@ -403,6 +407,7 @@ servicioMedico.todasZonas=Zonas del Diente
 servicioMedico.todasZonas.lineaAyuda=Si es servicio Odontol\u00f3gico marcar si aplica a las zonas independientes del diente
 servicioMedico.categoria=Categoria del Servicio
 servicioMedico.categoria.lineaAyuda=Categoria a la que pertenece el servicio 
+
 #Fin Servicios Medicos 
 
 #Inicio Consulta Odontologica
