cambios terminados a todo el proyecto 3.0

--- a/src/main/resources/edu/sgssalud/messages.properties
+++ b/src/main/resources/edu/sgssalud/messages.properties
@@ -52,7 +52,6 @@ common.surname=Apellidos
 common.firstname.inlinehelp=Sus nombres.
 common.surname.inlinehelp=Sus apellidos.
 common.email.inlinehelp=Prometemos nunca compartir sin permiso su direcci\u00f3n de correo electr\u00f3nico.
-emailprivate=Este usuario ha elegido mantener en secreto su direcci\u00f3n de correo electr\u00f3nico
 common.bio=Bio
 common.bio.inlinehelp=Qui\u00e9n eres y que haces?
 common.screenName=Nombre
@@ -139,6 +138,7 @@ common.delete.confirm=Confirme para Borrar
 common.login.fail=\u00a1Vaya! Algo sali\u00f3 mal al ingresar. Intentelo de nuevo? Vamos a tratar en averiguar lo que sali\u00f3 mal.
 common.login.bad.usernamepassword=\u00a1Vaya! No reconocemos ese nombre de usuario o contrase\u00f1a. \u00bfIntentelo de nuevo?
 common.new=Nuevo
+common.new1=Nueva
 common.actions=Acciones
 common.security.associateto.inlinehelp=Seleccione el grupo al que quiere asignar este Usuario
 common.dir=Direcci\u00f3n 
@@ -190,7 +190,6 @@ common.dircasacomercial=Direccion Casa Comercial Proveedora
 common.nombrecomercial=Nombre Comercial
 common.nombregenerico=Nombre Generico
 common.referenciaMedicamento=Referencia
-common.fechaelaboracionmedicamento=Fecha Elaboraci\u00f3n 
 common.fechacaducidadmedicamento=Fecha de Caducidad
 common.numfactura=N\u00famero de Factura
 common.unidadadesmedicamento=Unidades 
@@ -299,6 +298,7 @@ badWholeNumber=Must be a whole number
 checkboxRequired=Requerido
 emailInvalidMsg=No es una direcci\u00f3n de correo v\u00e1lida
 emailTakenMsg=La direcci\u00f3n de correo no esta disponible
+emailprivate=Este usuario ha elegido mantener en secreto su direcci\u00f3n de correo electr\u00f3nico
 MailBadFormat=Direcci\u00f3n de correo no v\u00e1lida
 passwordConfirmationRequired=Debe confirmar su contrase\u00f1a
 passwordInvalidMsg=Debe tener al menos 8 caracteres (los caracteres especiales estan permitidos)
@@ -318,10 +318,14 @@ comun.area=\u00c1rea
 comun.area.lineaAyuda=A que \u00e1rea pertenece su carrera
 comun.carrera=Carrera
 comun.carrera.lineaAyuda=En que carrera estudia
+comun.consulta = Consulta
 comun.estado=Estado
 comun.genero=G\u00e9nero
 comun.genero.lineaAyuda=Indique su g\u00e9nero
 comun.limite.vigencia=Limite de Vigencia
+comun.Indicadores=INDICADORES
+comun.Indicadores.Title=INDICADORES DE SALUD
+comun.indicador=Indicador
 comun.modulo=M\u00f3dulo
 comun.modulo.lineaAyuda=Indique en que m\u00f3dulo est\u00e1
 comun.nacionalidad=Nacionalidad
@@ -348,6 +352,7 @@ consultaMedica.title=CONSULTAS M\u00c9DICAS
 consultaMedica.motivo=Motivo de Consulta
 consultaMedica.Motivo=MOTIVO CONSULTA
 consultaMedica.Enfermedad=ENFERMEDAD
+consultaMedica.enfermedades=Enfermedades
 consultaMedica.Enfermedad.tip=ENFERMEDAD O PROBLEMA ACTUAL
 consultaMedica.Diagnostico=DIAGN\u00d3STICO
 consultaMedica.Observacion=OBSERVACI\u00d3N
@@ -358,6 +363,8 @@ consultaMedica.tiempoConsulta=Tiempo de Consulta
 consultaMedica.diagnostico=Diagn\u00f3stico
 consultaMedica.Tratamiento=Tratamiento
 consultaMedica.observacionC=Observaci\u00f3n general de Consulta Medica
+consultaMedica.observacionExamFis=Observaci\u00f3n de Examen Fisico
+consultaMedica.observacionActOrgySist=Observaci\u00f3n de Revisi\u00f3n Actual Organos y Sistemas
 
 fichaMedica.grupoSangineo=Grupo Sangineo
 fichaMedica.grupoSanguineo.lineaAyuda=Indique ha que grupo sanguineo pertenece
@@ -373,22 +380,30 @@ historiasclinicas.admin=Administrar Fichas M\u00e9dicas
 fechaReceta.fechaEmision=Fecha
 
 medicamento.nombre=Medicamentos Disponibles
+medicamento.Nombre=Medicamentos
 medicamento.presentacion=Presentaci\u00f3n
 medicamento.admin=Administrar Medicamentos
+medicamento.fecha.elaboracion=Fecha de Elaboraci\u00f3n
 
-receta.unidadesMedicacion=Unidades Medicaci\u00f3n
-receta.unidadesMedicacion.lineaAyuda=Cuantas unidades debe tomar
+
+receta.cargar.medicamento=Cargar Medicamento
 receta.dosis=Dosis
 receta.dosis.lineaAyuda=
-receta.tiempoToma=Tomar
-receta.tiempoToma.lineaAyuda=Tomar
 receta.duracionTratamiento=Duraci\u00f3n de Tratamiento
-receta.cargar.medicamento=Cargar Medicamento
 receta.indicaciones=Indicaciones
 receta.instriccion.unidadaesMedicacion=Indique el N\u00famero de Unidades del Medicamento
 receta.instriccion.dosis=Indique las unidades por Toma
 receta.instriccion.tiempoToma=Indique el Periodo entre Toma
 receta.instriccion.duracionTratamiento=Indique el Periodo del Tratamiento
+receta.Nombres=RECETAS M\u00c9DICAS
+receta.nombre=Receta
+receta.Responsable=Responsable
+receta.entrega=Entrega
+receta.emision=Emisi\u00f3n
+receta.tiempoToma=Tomar
+receta.tiempoToma.lineaAyuda=Tomar
+receta.unidadesMedicacion=Unidades Medicaci\u00f3n
+receta.unidadesMedicacion.lineaAyuda=Cuantas unidades debe tomar
 #Fin Modulo Farmacia
 
 #Inicio Servicios Medicos 
@@ -435,10 +450,13 @@ examenesLabClinico.admin=Administrar Examenes de Laboratorio Cl\u00ednico
 #Fin Laboratorio Clinico
 
 #Inicio Enfermeria
+signosVitales.toma=TOMA DE
 signosVitales.Nombre=SIGNOS VITALES
 signosVitales.nombre=Signos Vitales
 signosVitales.peso=Peso
 signosVitales.presionArt=Presi\u00f3n Arterial
+signosVitales.presionArt.sistolica=Sistolica
+signosVitales.presionArt.diastolica=Diast\u00f3lica
 signosVitales.frecuenciaResp=Frecuencia Respiratoria
 signosVitales.talla=Talla
 signosVitales.pulso=Pulso
@@ -448,3 +466,5 @@ signosVitales.enfermedadAct=Enfermedad o Problema Actual
 
 #Inicio Turnos
 #Fin Turnos
+
+EnfermedadesEstandarEcuador=A01,A02,A03,A04,A05,A06,A07
