Listas: Recetas, Fichas Médicas, Consulta Médica y Consulta Odontolólogica

--- a/src/main/resources/edu/sgssalud/messages.properties
+++ b/src/main/resources/edu/sgssalud/messages.properties
@@ -1,4 +1,4 @@
-# \u00f1 = \u00f1
+ #\u00f1 = \u00f1
 # \u00e9 = \u00e9
 # \u00f3 = \u00f3
 # \u00ed = \u00ed
@@ -365,19 +365,26 @@ consultaMedica.Tratamiento=Tratamiento
 consultaMedica.observacionC=Observaci\u00f3n general de Consulta Medica
 consultaMedica.observacionExamFis=Observaci\u00f3n de Examen Fisico
 consultaMedica.observacionActOrgySist=Observaci\u00f3n de Revisi\u00f3n Actual Organos y Sistemas
+consultaMedica.admin=Administraci\u00f3n de Consultas M\u00e9dicas
+consultaMedica.id= Id Consulta M\u00e9dica
+consultaMedica.medicoResponsable= M\u00e9dico Responsable
 
 fichaMedica.grupoSangineo=Grupo Sangineo
 fichaMedica.grupoSanguineo.lineaAyuda=Indique ha que grupo sanguineo pertenece
 fichaMedica.fechaApertura=Fecha de Apertura
+fichaMedica.ultimaActualizaci\u00f3n=Fecha de \u00daltima Actualizaci\u00f3n
 fichaMedica.numero=N\u00b0 de Ficha
 fichaMedica.abrir=Apertura Ficha M\u00e9dica
 fichaMedica.nombre=Ficha M\u00e9dica General
+fichaMedica.admin=Administraci\u00f3n de Fichas M\u00e9dicas
+fichaMedica.id= Id Ficha M\u00e9dica
+
 
 historiasclinicas.admin=Administrar Fichas M\u00e9dicas
 #Fin Modulo de Medicina
 
 #Inicio Modulo Farmacia
-fechaReceta.fechaEmision=Fecha
+fechaReceta.fechaEmision=Fecha Emision
 
 medicamento.nombre=Medicamentos Disponibles
 medicamento.Nombre=Medicamentos
@@ -398,12 +405,15 @@ receta.instriccion.duracionTratamiento=Indique el Periodo del Tratamiento
 receta.Nombres=RECETAS M\u00c9DICAS
 receta.nombre=Receta
 receta.Responsable=Responsable
+receta.responsableEmision=Responsable Emisi\u00f3n
+receta.responsableEntrega=Responsable Entrega
 receta.entrega=Entrega
 receta.emision=Emisi\u00f3n
 receta.tiempoToma=Tomar
 receta.tiempoToma.lineaAyuda=Tomar
 receta.unidadesMedicacion=Unidades Medicaci\u00f3n
 receta.unidadesMedicacion.lineaAyuda=Cuantas unidades debe tomar
+receta.admin=Administrar Recetas
 #Fin Modulo Farmacia
 
 #Inicio Servicios Medicos 
@@ -430,6 +440,7 @@ consultaOdontologica.observacionC=Observaci\u00f3n general de Consulta Odontol\u
 consultaOdontologica.info=INFORMACI\u00d3N CONSULTA
 consultaOdontologica.Diagnostico.radiof=DIAGN\u00d3STICO RADIOGR\u00c1FICO
 consultaOdontologica.diagnostico.radiof=Diagn\u00f3stico Radiofr\u00e1fico
+consultaOdontologica.id= Id de Consulta Odontol\u00f3gica
 Odontograma=ODONTOGRAMA
 Odontograma.name=Odontograma
 Odontograma.name.evolutivo=Evolutivo
