cambios terminados  3.2:  responsin y gravar imagenes y reportes

--- a/src/main/resources/edu/sgssalud/messages.properties
+++ b/src/main/resources/edu/sgssalud/messages.properties
@@ -432,6 +432,7 @@ consultaOdontologica.observacionC=Observaci\u00f3n general de Consulta Odontol\u
 consultaOdontologica.info=INFORMACI\u00d3N CONSULTA
 consultaOdontologica.Diagnostico.radiof=DIAGN\u00d3STICO RADIOGR\u00c1FICO
 consultaOdontologica.diagnostico.radiof=Diagn\u00f3stico Radiofr\u00e1fico
+consultaOdontologica.observacionED=Observacio Examen Dentario
 Odontograma=ODONTOGRAMA
 Odontograma.name=Odontograma
 Odontograma.name.evolutivo=Evolutivo
