--- a/src/main/resources/edu/sgssalud/messages.properties
+++ b/src/main/resources/edu/sgssalud/messages.properties
@@ -387,7 +387,7 @@ enfermedadesCie10.admin=Agregar Enfermedades Cie 10
 
 #Inicio Modulo Farmacia
 fechaReceta.fechaEmision=Fecha Emision
-
+fechaReceta.fechaEntrega=Fecha Entrega
 medicamento.nombre=Medicamentos Disponibles
 medicamento.Nombre=Medicamentos
 medicamento.presentacion=Presentaci\u00f3n
@@ -416,6 +416,7 @@ receta.tiempoToma.lineaAyuda=Tomar
 receta.unidadesMedicacion=Unidades Medicaci\u00f3n
 receta.unidadesMedicacion.lineaAyuda=Cuantas unidades debe tomar
 receta.admin=Administrar Recetas
+receta.estado=Estado
 #Fin Modulo Farmacia
 
 #Inicio Servicios Medicos 
