Cambios a todo  el proyecto (modelo) y emision de recetas

--- a/src/main/resources/edu/sgssalud/messages.properties
+++ b/src/main/resources/edu/sgssalud/messages.properties
@@ -203,6 +203,7 @@ validation.requiredIdentificationNumber=N\u00famero de identificaci\u00f3n reque
 validation.invalidIdentificationNumber=N\u00famero de identificaci\u00f3n inv\u00e1lido
 validation.lengthIdentificationNumber=N\u00famero de identificaci\u00f3n muy corto
 validation.wrongIdentificationNumber=Formato de n\u00famero de identificaci\u00f3n no v\u00e1lido
+validation.wrongIdentificationNumberLegalEntity=FORMATO INCORRECTO___
 validator.dni=El DNI ingresado pertenece a otro usuario
 
 #Modules
@@ -318,7 +319,10 @@ comun.area=\u00c1rea
 comun.area.lineaAyuda=A que \u00e1rea pertenece su carrera
 comun.carrera=Carrera
 comun.carrera.lineaAyuda=En que carrera estudia
-comun.consulta = Consulta
+comun.consulta= Consulta
+comun.fecha= Fecha
+comun.fecha.now= Fecha Actual
+comun.now= Actual
 comun.estado=Estado
 comun.genero=G\u00e9nero
 comun.genero.lineaAyuda=Indique su g\u00e9nero
@@ -336,6 +340,7 @@ comun.paralelo=Paralelo
 comun.paralelo.lineaAyuda=En que paralelo est\u00e1
 comun.profesion=Profesi\u00f3n
 comun.profesion.inlinehelp=Indique que profesi\u00f3n tiene
+comun.terminar=Terminar
 comun.tipoEstudiante=Tipo de Estudiante
 comun.tipoEstudiante.lineaAyuda=Seleccione el tipo de Estudiante perteneciente a la Comunidad Universitaria
 #Fin Datos comunes
@@ -409,7 +414,7 @@ receta.nombre=Receta
 receta.Responsable=Responsable
 receta.responsableEmision=Responsable Emisi\u00f3n
 receta.responsableEntrega=Responsable Entrega
-receta.entrega=Entrega
+receta.entrega=Entregar
 receta.emision=Emisi\u00f3n
 receta.tiempoToma=Tomar
 receta.tiempoToma.lineaAyuda=Tomar
