clases modificadas de cardex

--- a/src/main/resources/edu/sgssalud/messages.properties
+++ b/src/main/resources/edu/sgssalud/messages.properties
@@ -391,14 +391,19 @@ enfermedadesCie10.admin=Agregar Enfermedades Cie 10
 #Fin Modulo de Medicina
 
 #Inicio Modulo Farmacia
+farmacia.cardex.control=Control de Cardex para Medicamento
 fechaReceta.fechaEmision=Fecha Emision
 fechaReceta.fechaEntrega=Fecha Entrega
-medicamento.nombre=Medicamentos Disponibles
-medicamento.Nombre=Medicamentos
-medicamento.presentacion=Presentaci\u00f3n
 medicamento.admin=Administrar Medicamentos
 medicamento.fecha.elaboracion=Fecha de Elaboraci\u00f3n
-
+medicamento.nombre=Medicamentos Disponibles
+medicamento.Nombres=Medicamentos
+medicamento.Nombre=Medicamento
+medicamento.nombre.disponible=Medicamento Disponible
+medicamento.presentacion=Presentaci\u00f3n
+medicamento.cantidadIngreso=Cantidad de Ingreso    
+medicamento.referenciaIngreso=Referencia de Ingreso
+medicamento.referencia=Referencia
 
 receta.cargar.medicamento=Cargar Medicamento
 receta.dosis=Dosis
